Bug 167710 - FILEOPEN RTF Document property shows up in body as "Unknown"
Summary: FILEOPEN RTF Document property shows up in body as "Unknown"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:26.2.0 target:25.8.1 target:25...
Keywords: bibisected, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2025-07-29 08:53 UTC by Gabor Kelemen (Collabora)
Modified: 2025-08-07 17:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (40.43 KB, application/msword)
2025-07-29 08:53 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word and Writer (37.10 KB, image/png)
2025-07-29 08:53 UTC, Gabor Kelemen (Collabora)
Details
The problematic string as seen in NotePad++ (14.80 KB, image/png)
2025-07-29 08:54 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-07-29 08:53:03 UTC
Created attachment 202048 [details]
Example file from Word

Attached minimized, anonimized document does not show any content in Word, but in Writer the "Unknown;" word is displayed.

1. Open attached file
-> shows "Unknown;" instead of nothing

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (fr_FR); UI: en-US
Calc: threaded

seems to have started in 4.4 around:

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=a140f3bca681ffcc5944d2b4cb9a81985c59c702..568778874429595855b435792e5ebecd52956dae

there seem to be several RTF-related commits. most suspicious is:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=82e17dbb2a16c7653a163139f0eea51faa4d46b8

fdo#77996: writerfilter: RTF import: re-work destination text buffering

which mentions \revtbl where this Unknown; is coming from in the example file.
Comment 1 Gabor Kelemen (Collabora) 2025-07-29 08:53:47 UTC
Created attachment 202049 [details]
The example file in Word and Writer
Comment 2 Gabor Kelemen (Collabora) 2025-07-29 08:54:31 UTC
Created attachment 202050 [details]
The problematic string as seen in NotePad++
Comment 3 raal 2025-07-31 22:12:05 UTC
Confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b87eae151aa7a9dbeca6b8f09ffd366f367ba0bc
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2025-08-01 12:03:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b45ba94bf2d927d0306cdd0e885017735ae4b21e

tdf#167710 writerfilter: RTF import: ignore text in \revtbl

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2025-08-01 12:06:11 UTC
fixed on master
Comment 6 Commit Notification 2025-08-07 15:34:33 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/ee3d6b675620f32d01cbe3934e337cfc26a5519d

tdf#167710 writerfilter: RTF import: ignore text in \revtbl

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-08-07 17:40:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/68f259e7cfade882da4dfc4f0449c6db8abed4fc

tdf#167710 writerfilter: RTF import: ignore text in \revtbl

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.