tdf#167710 writerfilter: RTF import: ignore text in \revtbl

Only text in groups in \revtbl is relevant. Same goes for \stylesheet.

(regression from commit 82e17dbb2a16c7653a163139f0eea51faa4d46b8)

Change-Id: I70a97f7815e1f83b10be7cf12ee5abcd6b662a92
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188705
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit b45ba94bf2d927d0306cdd0e885017735ae4b21e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188772
Tested-by: Michael Stahl <michael.stahl@collabora.com>